更新语法笔记

--- a/语法/变量.md
+++ b/语法/变量.md
@@ -1,32 +1,37 @@
 ﻿# 变量
 
-## 实例
-
-**实例**是可以说“这个”，“那个”的东西。能指出哪一个的东西才能讨论“同一个”。
-
-在编写阶段，我们不知道用户要输入的账号和密码是什么。  
-为此需要有一种东西表示用户输入数据的实例。
+变量是值的容器。可以储存值以及当作值来读取。  
+表达式结果和方法调用结果的值是临时的，  
+如果要多次使用必须储存为变量。
 
 ## 标识符
 
-变量是可以自定义名称的东西。c#中可以自己起名字的东西的名字称为标识符。
+变量是可以自定义名称的东西。  
+c#中可以自己起名字的东西的名字称为标识符。[^有意义的名字]
 
-标识符的起名规则如下
+[^有意义的名字]:语言的作用是传播和记录。  
+大家在练习或是作业时候创建出来的项目，即用即丢，阅后即焚。  
+这种时候用abc这种无意义的东西作为名字没关系。  
+但是之后在需要保留（以后会再次使用），需要传播（协作开发）的时候，  
+名字应该是能介绍作用的，能让人不读文档，不问作者，也能猜到有什么用，怎么用。
 
-- 不能和有效范围内其他同优先级标识符同名
-    - 如果优先级不同，那么在有效范围内只能访问到最高优先级的东西。
-    - 有效范围是声明时所处大括号内，以及这个大括号里嵌套的大括号内。
+标识符的起名规则如下：
+
+- 不能和有效范围内其他同优先级标识符同名。
+    - **有效范围是声明时所处大括号内，以及这个大括号里嵌套的大括号内**。
 - 不能以数字开头
-- 不能和关键字同名
-    - 关键字是具有功能的词组，一旦出现就会认为要执行功能
-- 不能包含除了下划线外的特殊字符
-  - 但如果和关键字同名，可以在开头加@符号
-      - 不和关键字同名时，@仍然是特殊字符
+- 不能和关键字同名[^不用记关键字]
+- 不能包含除了下划线外的特殊字符[^关键字重名]
   - 中文不算做特殊字符
+
+[^不用记关键字]:不需要记住关键字有哪些。但如果好奇，可以访问<https://learn.microsoft.com/zh-cn/dotnet/csharp/language-reference/keywords/>
+
+[^关键字重名]:但如果和关键字同名，可以在开头加`@`符号。只有此时能使用，否则`@`仍然是特殊字符。
 
 ```csharp
 var v1 = 20;
-{//一个大括号是一个效果范围块
+{
+    //一个大括号是一个效果范围块
 	var v2 = v1;
 	Console.WriteLine(v2);//可以读取
 }
@@ -39,50 +44,109 @@ Console.WriteLine(v2);//无法读取
 
 ## 创建和使用变量
 
-- 声明（创建）  
-  声明变量的方式是`类型+变量名`。
-- 赋值（修改）  
-  赋值语句是`变量 = 值`。  
-  右侧的值可以是任何来源的有效值，包括另一个变量。
-    - 变量储存的是一个值而不是获得值的操作。  
-      例如赋值为表达式`i + 3`时，只会在赋值时计算一次这个表达式。  
-      之后`i`变化的时候，使用这个表达式赋值的变量不会跟随变化。
-- 使用  
-  在任何需要值的地方写入变量，运行时就会解析这个变量里的值。  
-  自己声明的变量必须经过初始化才能使用。
-    - 不要给变量加双引号。若如此做会当作文字而不会解析值。
-
 ```csharp
 int i;//声明一个int类型的变量
 i = 3;//变量赋值
 Console.WriteLine(i);//使用变量
 ```
 
-## 变量类型
+### 声明（创建）
 
-变量的类型和声明变量时写的类型一致。  
-在赋值时，值的类型必须和变量类型能兼容。  
+声明变量的方式是`类型+变量名`。  
+变量也是有类型的，就是在声明时写的类型。
+
+变量可以在声明的时候同时赋值。  
+可以一次声明多个变量。
+
+```csharp
+int i1 = 4, i2 = 3, i3 = 6;
+```
+
+### 赋值（修改值）
+
+赋值语句是`变量 = 值`。  
+值可以是任何来源的值，例如字面量，运算结果，方法结果。
+
+**变量储存的是一个值而不是获得值的操作。**  
+
+```csharp
+int a = 10;
+int b = a + 10;//b的值是此时表达式计算出来的20
+Console.WriteLine(b);
+a = 30;//b的值不会随a的变化而变化
+Console.WriteLine(b);
+```
+
+### 使用
+
+在需要值的地方写这个变量，就会获取变量储存的值。  
+**不要给变量加双引号。若如此做会当作文字而不会解析值。**
+
+自己声明的变量必须经过初始化（首次赋值）后才能访问值。
 
 ### var
 
-关键字`var`可以用来在声明变量时代替变量类型，根据值的类型来自动决定变量类型。  
+在声明变量时，可以使用关键字`var`来代替类型进行声明。[^少量使用]  
+若如此做：
 
-使用`var`作为类型与直接写具体类型有一些优劣区别：
+- 必须立刻进行赋值。
+- 一次只能声明一个变量。
+- 自动识别值的宣称类型[^宣称类型]作为变量类型。
 
-- `var`声明变量一次只能声明一个变量。  
-- `var`声明变量必须在声明的同时立刻赋值。
-- 有时会希望使用与值兼容的类型作为变量类型，而不是完全与值类型相同。
-- 如果读者在离开编程软件的情况下难阅读源码，可能难以判断变量类型。
+[^少量使用]:如果读者在离开编程软件的情况下难阅读源码，可能难以判断变量类型。  
+所以如果不是字面量，调用方法的名字没有明显体现结果类型，尽可能不要用`var`。
+
+[^宣称类型]:c#中有继承的概念，例如香蕉是水果。  
+值的实际类型可能是香蕉，但可以赋值给水果类型的变量。  
+此时这个变量的宣称类型是水果，实际类型是香蕉。
+
+## 引用变量
+
+在变量前用`ref`修饰，可以创建引用变量。  
+对引用变量的任何操作都会反馈到被引用的变量上。
+
+被引用的必须是变量，不能是一个表达式等临时值。  
+为引用变量赋值时，被引用的变量也要加上`ref`。
+
+```csharp
+int a = 10;
+ref int b = ref a;//必须是可赋值的变量
+Console.WriteLine(a);//10
+Console.WriteLine(b);//10
+b = 20;
+Console.WriteLine(a);//20
+Console.WriteLine(b);//20
+```
+
+为引用变量重新赋值时，不能使用作用域更短的变量赋值。  
+
+```csharp
+int a = 10;
+ref int b = ref a;
+{
+	int c = 10;
+	b = ref c;//b可以在大括号外访问，但c不行。
+}
+```
+
+### 只读引用变量
+
+使用`ref readonly`声明引用变量，只允许读取，不允许重新赋值。
+
+```csharp
+int a = 10;
+ref readonly int b = ref a;//必须是可赋值的变量
+```
 
 ## 常量
 
-使用关键字`const`+具体类型的声明变量可以声明常量。  
+声明变量时在类型前加上关键字`const`修饰可以改为常量。
 
-- 常量必须在声明时赋值
-- 不能使用`var`作为类型
-- 常量的赋值必须使用另一个常量
+- 不能使用`var`作为类型。
+- 常量必须在声明时赋值。
+- 常量的赋值必须使用另一个常量。
     - 通常是字面量或仅字面量的表达式。
-- 常量不能修改
+- 常量不能赋值。
 - 只有字面量和枚举值以及`null`可以被声明为常量
 
 ```csharp
@@ -91,43 +155,34 @@ const double Pi = 3.1415926;
 
 # 类型转换
 
-部分类型之间可以进行转换。  
-转换是否可行以及转换的方式，取决于源类型和目标类型之间的关系。
-
-## 继承
-
-继承和多态是面向对象语言的特点。  
-若类型A继承了类型B，则：
-
-- A具有B的所有API
-- A可以代替B，因为A能行使B的所有职责。
-- A不需要进行转换也能当B使用。
-
 ## 自定义类型转换
 
-没有继承关系的类型可以自定义类型转换。
+两个类型之间可以定义转换方式。
 
-- 这种转换会产生一个新的值。所以转回来也不一定相同。
-- 转换可能是单向的。可能转不回来。
-- 可以定义显式转换或隐式转换。
-
-## 隐式转换
-
-隐式转换是一种安全的类型转换方式，不会出错也不会丢失数据。（自定义转换应当满足上述理念）。
-隐式转换什么也不需要做，可以当作被转换的值就是目标类型。
+- 这两个类型不能有继承关系。
+- 转换是单向的。可能转不回来。
+- 分为显式转换和隐式转换。
+    - 显式转换可能存在转换出错或数据丢失。
+    - 隐式转换不应该出错或丢失数据。
 
 ```csharp
-int i = 0;
-long L = i;
-object o = i;
+long L = 0;
+double d = L;//隐式转换
+L = (long)d;//强制转换，小数转整数会失去所有小数部分的数据
 ```
 
-## 强制转换
+## 多态
 
-强制转换是有可能不成功或可能丢失数据的转换方式。  
-强制转换需要在被转换的值前面，加上一对小括号，小括号内写目标类型。
+c#是面向对象语言。面向对象语言有三大特征：封装，继承，多态。  
+若两个类型之间有继承关系，则他们具有多态特征。
+若类型A继承自类型B，则：
+
+- A具有B的所有API。
+- A类型可以视作B类型使用或赋值。
+- B类型可以强制转换为A类型，但若实际类型不是则转换失败。
 
 ```csharp
-i = (int)L;//可能截断部分储存的数字，可能得到非预期结果
-string s = (string)o;//实际储存的类型可能不是目标类型，可能报错
+string s = "hello";
+object o = s;//string继承自object
+s = (string)o;//若实际类型不是string，则这个转换会失败。
 ```
