--- a/语法/命名空间.md
+++ b/语法/命名空间.md
@@ -24,6 +24,8 @@ namespace Plain.Castle
 }
 ```
 
+### 文件命名空间
+
 命名空间可以以分号结尾
 
 - 该文件下所有类都会处于这个命名空间里
@@ -34,12 +36,11 @@ namespace Plain.Castle
 namespace Plain.Castle;
 ```
 
-## 完全限定名
+### 完全限定名
 
-一个类带上他的完整命名空间，称为完全限定名。
+一个类带上他的完整命名空间，称为完全限定名。[^global]
 
-- 没有命名空间的，使用`global::`表示根路径。
-    - 唯一连用两个冒号的地方
+[^global]:没有命名空间的，使用`global::`表示根路径
 
 ```csharp
 global::Boo boo1 = new global::Boo();
@@ -89,9 +90,15 @@ namespace A.B
 	}
 }
 ``` 
-## 类型别名
 
-使用`using`可以用类似变量赋值的操作，给一个类型指定一个别名。
+## 别名引用
+
+使用`using`可以用类似变量赋值的操作，可以给一个类型或命名空间指定一个别名。[^基本类型关键字]  
+在指定期间必须使用完全限定名，且不能使用其他别名参与。
+
+[^基本类型关键字]:关键字`int`，`bool`等等实际作用就是类型别名。
+
+### 类型别名
 
 ```csharp
 using CO2 = Gas.CarbonDioxide;
@@ -102,11 +109,20 @@ namespace Gas
 	class CarbonDioxide;
 }
 ```
->关键字`int`，`bool`等等实际作用就是类型别名。
+
+### 命名空间别名
+
+命名空间别名在使用时需要在后面使用`::`。
+
+```csharp
+using Coll = System.Collections.Generic;
+
+Coll::KeyValuePair.Create(1, 2);
+```
 
 ## 静态引用
 
-使用`static using`可以导入一个类型的所有静态成员，
+使用`static using`可以导入一个类型的所有静态成员，  
 在不点出他的类名的情况下使用他的静态成员。
 
 - 成员常量和嵌套类也会被认为是静态成员。
@@ -120,7 +136,7 @@ int max = MaxValue;
 
 ## 全局引用
 
-使用`global`修饰的命名空间引用，类型别名，静态引用，
+使用`global`修饰的命名空间引用，别名，静态引用，
 会作用到这个程序集下的所有文件。
 
 ```csharp
