--- a/语法/委托.md
+++ b/语法/委托.md
@@ -3,9 +3,9 @@
 委托类型用`delegate`+方法签名定义。  
 该类型的有效值是任何与这个委托的方法签名匹配的方法。
 
-- 需要返回值和参数列表匹配，名字不需要匹配
-- 一个方法可以给任意签名匹配的委托赋值，但这些委托之间不能相互赋值
-- 用方法赋值时不能带括号，带括号是调用方法
+- 需要返回值和参数列表匹配，名字不需要匹配。
+- 一个方法可以给任意签名匹配的委托赋值，但这些委托之间不能相互赋值。
+- 用方法赋值时不能带方法的括号，带括号是调用方法。
 
 ```csharp
 GetName getName = ToLower;
@@ -22,35 +22,28 @@ string ToLower(string str)
 delegate string GetName(string name);
 ```
 
-## 使用场景
+## 为什么使用委托
 
-### 回调函数
+委托是方法的类型，可以生成方法的变量和参数。  
+并之后可以由其他方法调用你的方法。
 
-假设现在有一个类，他的作用是下载文件。并希望下载完成时做些什么。
+### 为什么自己不调用要给别人调用
 
-- 谁决定做什么
-    - 下载类不能预测要做什么，可能要解压压缩包，可能要文字转二维码。
-    - 调用者明确知道要做什么。
-- 谁决定什么时候做
-    - 下载类知道文件什么时候下载完成。下载完成就可以立刻执行。
-    - 调用者不知道什么时候下完。如果要循环检查，势必会耽误他手头的工作。
+例如不想现在立刻调用，而调用时机别人更清楚。  
 
-### 排序依据
+例如每隔一段时间执行一次。自己做时间判断太消耗性能了。  
+而c#中有计时器类，也确实提供了时间一到就执行一次方法。  
+那么你只需要把你的方法提供给他。
 
-集合类型之一`List<T>`（列表）有一个排序方法。可以传入一个委托指定排序依据。
+### 中间的逻辑不一样，最后的目的还能实现吗
 
-- 谁决定做什么
-    - 列表知道两个元素的大小关系后，由列表决定如何摆放，以及下一个比较谁
-    - 调用者决定如何判断两个元素的大小关系
+一些使用场景本身就是考虑如何处理这个方法的。
 
-### 创建线程
+例如测量方法的执行时间，这的确不在乎方法内容。
 
-c#的线程类有一个构造器接收委托。在开启线程时会执行这个委托
-
-- 谁决定做什么
-    - 调用者决定执行什么内容
-- 谁决定在哪里执行
-    - 线程类会创建线程，并在新线程上执行
+又或者c#的线程类，开一个新线程执行你的方法，  
+他知道如何开辟线程，如何在线程上执行内容。  
+但他不知道要执行什么，也确实不在乎执行什么。
 
 ## 多播委托
 
@@ -88,8 +81,9 @@ class Log
 
 ## 事件
 
-如果一个类储存委托，并可能调用多次。这个委托要用字段储存起来。
-同时像外部公开委托的注册和退订。
+如果一个类储存委托，并可能调用多次。  
+这个委托要用字段储存起来。  
+同时向外部公开委托的注册和退订。
 
 事件只有针对委托的只有注册和退订访问器。  
 调用者只能对事件进行`+=`和`-=`。  
@@ -121,13 +115,17 @@ class SayHello
 }
 ```
 
+### 自动实现事件
+
 如果不需要逻辑，可以省略访问器，只留下`event`。
 
-- 事件会生成一个匿名委托
-  - 仅限于能存在字段（不能是接口）的事件
-  - 仅限于能存在逻辑（不能有抽象修饰）的事件。
-- 声明类可以直接把事件当做他控制的匿名委托访问。
-  - 匿名委托的访问权限是`private`的，只能在声明类和嵌套类里访问
+- 事件会生成一个匿名委托[^匿名委托]
+- 声明类可以直接把事件当做他控制的匿名委托访问。[^嵌套类]
+
+[^匿名委托]:
+- 仅限于能存在字段（不能是接口）的事件
+- 仅限于能存在逻辑（不能有抽象修饰）的事件。
+[^嵌套类]:匿名委托的访问权限是`private`的，只能在声明类和嵌套类里访问。
 
 ```csharp
 class SayHello
@@ -169,10 +167,14 @@ delegate string GetName(string name);
 当匿名方法满足一些条件时可以省略一部分：
 
 - 当赋值的变量类型明确时，返回值类型可以省略。
-- 当赋值的变量类型明确时，参数类型可以省略（要么全部有类型，要么全部省略）。
-- 当参数刚好只有一个且不需要明确类型时，参数的括号可以省略。
+- 当赋值的变量类型明确时，参数类型可以省略[^参数类型]。
+- 当参数刚好只有一个[^类型明确]时，参数的括号可以省略。
 - 当方法主体只有一条语句时，大括号和`return`可以省略。
 - 不需要用到某个参数时，可以使用`_`表示舍弃。
+
+[^参数类型]:要么全部有类型，要么全部省略
+[^类型明确]:且类型明确
+
 
 ## 捕获变量
 
@@ -182,6 +184,7 @@ delegate string GetName(string name);
 - 在方法内对捕获变量修改，会作用到原变量上。
 - 匿名方法分开创建和执行，执行时按照变量执行时的值。
 - 捕获变量的作用域会扩大，直到捕获它的委托一起被清理。
+- 不能捕获引用变量
 
 ```csharp
 GetName get = s => s;
