--- a/语法/接口.md
+++ b/语法/接口.md
@@ -2,18 +2,18 @@
 
 ## 声明接口
 
-接口通过`interface`关键字声明。接口成员和类的区别有：
+接口通过`interface`关键字声明。接口成员和类成员的区别有：
 
-- 不能存在实例字段。
-  - 自动属性和自动事件也不会生成对应的匿名字段。
-- 不存在实例构造器和终结器。
+- 不能存在实例字段，实例构造器和终结器。[^匿名字段]
 - 接口成员访问权限默认是`public`
-- 接口的实例方法可以没有主体。
-  - 可以用`virtual`修饰，会要求有主体。
-  - 可以用`abstract`修饰，会要求不能有主体。
-    - 不能给`private`使用`abstract`。
-  - 没有以上两个修饰时，根据主体是否存在视为有上述其中之一修饰。
-- 接口的静态方法可以用`abstract`修饰并没有主体。
+- 接口的实例方法可以没有主体。[^虚拟和抽象]
+    - `private`成员必须有主体。
+- 接口的静态方法[^泛方法]可以用`abstract`修饰并没有主体。
+
+[^匿名字段]:自动属性和自动事件也不会生成对应的匿名字段。
+[^虚拟和抽象]:有主体的视为使用`virtual`修饰，没有主体的视为使用`abstract`修饰。  
+如果写了修饰符，那么会要求必须有或没有主体。  
+[^泛方法]:也包括属性，索引，事件。
 
 ```csharp
 interface ICreat
@@ -41,9 +41,9 @@ interface IFly
 
 类或结构在定义时可以选择实现任意数量的接口。
 
-- 若如此做，必须要实现接口里的`abstract`成员
-- 接口里没有字段，而设计理念上，类应的属性和方法应当和自己的字段有关
-- 接口不知道实现类有什么字段，所以也不在乎他们如何实现这些成员
+- 若如此做，必须要实现接口里的`abstract`成员。
+- 类应当使用自己的字段来实现接口要求的成员。
+- 接口不知道实现类有什么字段，所以也不在乎他们如何实现这些成员。
 
 ### 隐式实现
 
@@ -70,7 +70,7 @@ class Loong : IFly, ICooking
 - 不希望定义或公开同名成员
 - 不满意基类型对接口的实现
 
-显式实现需要把`接口名.成员`一起作为成员名字，且不能有访问修饰符。
+显式实现需要把`接口名.成员`一起作为成员名字，且不能有访问修饰符。  
 显式实现的成员**不能通过这个类型调用**，只能转为接口调用。
 
 ```csharp
@@ -86,14 +86,15 @@ class Steak : ICreat, IFood
 }
 ```
 
-# 多态
+## 多态
 
-## 类型兼容
+### 类型兼容
 
 实现了接口的类型，可以视作接口类型给接口变量赋值。
 
-- 接口没有实例构造器，只能以这种方式赋值
-- 从接口调用成员时，会调用实现接口的类型上的方法
+- 值类型转接口会引发装箱。
+- 接口没有实例构造器，只能以这种方式赋值。
+- 从接口调用成员时，会调用实现接口的类型上的方法。
 
 ```csharp
 Loong loong = new Loong();
@@ -112,16 +113,33 @@ Console.WriteLine(food.Satiety);
 - 调用者只希望使用接口的这一小部分功能。而不在乎实现类的剩余部分的功能。
 - 调用者不在乎实现类具体如何实现的。
 
-## 为什么要调用接口而不直接调用类
+### 为什么使用接口
 
-接口变量主要是作为方法参数使用。  
-这样可以让这个方法在更多的情况下被调用。
+#### 直接使用具体的类作为类型不好吗？
 
-# 可释放接口
+接口一般作为API使用，也就是在数据交互时。  
+而使用接口类型，由于多态特性，这样的API可以在更多地方被调用。
+
+局部变量确实没必要对已知类型使用接口变量装载。
+
+#### 实现类的实现方式不一样，为什么还能保证最终目的实现？
+
+API只处理中间的处理过程。可以从很多来源得到的数据，处理完后也能被很多使用者处理。  
+最终目的也可以由很多方式实现，这些API只要能合理拼装，就不会影响结果。
+
+例如微信扫码，图片来源可以是相机，相册，聊天记录。  
+虽然这三者区别非常大，但对于“提供图片”这件事上，他们都能处理好。  
+而提供图片后也不仅能用于处理二维码，也可以做识物，翻译。
+
+## 可释放接口
 
 对于实现了`IDisposable`接口的类型，可以在声明变量时用`using`修饰。
 
-这个变量在脱离作用域时将自动调用`Dispose`方法。
+这个变量在脱离作用域时将自动调用`Dispose`方法。[^终结器]  
+
+[^终结器]:由于终结器调用时机不确定，所以一般使用`IDisposable`接口清理资源。  
+同时，终结器中应该调用清理方法，以防止没有清理。  
+程序结束时操作系统也会清理资源，但一些有依赖的资源可能对处理顺序有要求。
 
 ```csharp
 if (true)
@@ -141,6 +159,3 @@ class Dis(string s) : IDisposable
 	}
 }
 ```
-
-由于终结器调用时机的不确定性，通常使用释放模式对不使用的东西进行清理。
-释放模式设计理念参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/dispose-pattern)。
