--- a/语法/枚举和特性.md
+++ b/语法/枚举和特性.md
@@ -6,7 +6,7 @@
 - 只能定义字段，不能定义其他类型的成员
     - 字段是常量（静态的）
 	- 可以定义扩展方法
-	- 类型都是所在处的枚举类型
+	- 类型都是所处的枚举类型
 
 ## 声明枚举
 
@@ -47,7 +47,7 @@ int i = (int)Card.Suit;
 - 数值绑定可以出现重复或无序的情况，这不会报错但会导致混淆。
 
 ```csharp
-enum Suit : int // 花色
+enum Suit : byte // 花色
 {
 	Spade = 0, // 黑桃
 	Heart = 1, // 红心
@@ -79,3 +79,54 @@ enum Position // 职位
 	Founder = 0b1111, // 创始人
 }
 ``` 
+
+# 特性
+
+特性可以像常量一般附着在类型或类成员上以附加额外信息。
+
+- 分析器可以分析源码，在编译时和特性交互。
+- 反射可以在运行时获得元数据，在运行中和特性交互。
+- 特性是所有派生自`Attribute`的类
+
+## 添加特性
+
+特性是一种用于给代码添加额外信息的声明性标签。  
+在修饰的元素之前，用方括号声明特性。
+
+- 需要声明多个特性时，可以使用多个方括号，也可以在一个方括号里使用逗号隔开。
+
+```csharp
+[Serializable, Obsolete("过时的类")]
+public class MyClass1;
+
+[Serializable]
+[Obsolete("过时的类")]
+public class MyClass2;
+```
+
+## 特性的简易名字
+
+- 特性类通常以`Attribute`结尾。
+- 但在应用特性时，可以省略结尾的`Attribute`。
+- 如果要强调（或是在省略后有重名类）特性的名字就是原本这样，  
+  不是省略后的结果。那么需要在前面加`@`
+
+```csharp
+[Tips2Attribute,@Tips2]
+class MyClass7;
+
+class Tips2Attribute : Attribute;
+class Tips2 : Attribute;
+```
+
+## 特性成员赋值
+
+- 特性可以在构造器的所有参数后继续赋值
+    - 类似初始化器语法，需要标明成员名
+    - **只能使用常量**
+- 调用无参构造器且不需要给成员赋值的，可以省略构造器的括号。
+
+```csharp
+[Obsolete("过时的类",DiagnosticId ="GPT")]
+public class MyClass4;
+```
