--- a/语法/模式匹配.md
+++ b/语法/模式匹配.md
@@ -1,72 +1,183 @@
 ﻿# 模式匹配
 
-模式匹配是一系列与常量进行比较的表达式。  
-可以与`switch`选择和表达式配合使用。  
-单独使用（如在`if`中）则需要使用`is`开启。
+模式匹配是验证值的类型以及与常量关系的判断。  
+模式匹配需要配合`switch选择`，`switch表达式`或`is`表达式使用。
 
-模式匹配不检查自定义的类型转换和自定义运算符。
+**模式匹配不检查自定义的类型转换和自定义运算符**。
+
+```csharp
+object o = 1;
+if (o is int)
+{
+}
+else if (o is float)
+{
+}
+
+switch (o)
+{
+	case int:
+	case float:
+	default:
+		break;
+}
+
+_ = o switch
+{
+	int => 1,
+	float => 2,
+	_ => 0
+};
+```
 
 ## 值判断
 
-- 关系判断可以判断一个值是否为某一常量
-    - 若要与数字类型比较，则可以使用`>`，`<`，`>=`，`<=`
-    - 若被判断的类型编译器已知是几种可为常量的数字类型，则可以跨类型比较值
-	- 匹配`null`时不会使用`==`判断，运算符可以自定义执行逻辑。
-- 如果有且或非，需要用关键字`and`,`or`,`not`
+### 等量判断
+
+等量判断可以判断是否是某一具体常量。  
 
 ```csharp
-float f = 1f;
-Console.WriteLine(f is 1);//true
-						  //已知是基础数字类型的可以跨类型比较
-Console.WriteLine(f is >= 1f and <= 2f);//true
+var s = "hello";
+switch (s)
+{
+	case "hello":
+		break;
+	case "world":
+		break;
+	case "c#":
+		break;
+	default:
+		break;
+}
+```
 
-object o = f;
-Console.WriteLine(o is >= 1 or <= 1);//false
-									 //已经被装箱的数字需要匹配类型
-Console.WriteLine(o is not (2f or <= 0f));//true
-										  //优先级and>or>not。可以用括号改变优先级
+### 大小判断
 
+当被判断的值是数字时，可以使用`>`，`<`，`>=`，`<=`。[^类型假设]
+
+[^类型假设]:
+如果判断时，值的宣称类型是基本数字类型之一（`int`,`float`,`double`等关键字类型）  
+则判断时可以跨类型比较，例如认为`3 == 3f`。  
+否则会同时进行类型判断，并要求和字面量的类型匹配。
+
+```csharp
+int i = 20;
+string s = i switch
+{
+	> 17 => "★★★",
+	> 10 => "★★",
+	> 0 => "★",
+	_ => "☆"
+};
+```
+
+### 逻辑判断
+
+模式匹配可以使用关键字`and`,`or`,`not`进行**合取**（与），**析取**（或），**取反**（非）。  
+并可以打括号以改变优先级。
+
+```csharp
+int i = 20;
+if (i is (> 100 or < 10) and not 0)
+{
+
+}
 ```
 
 ## 内容判断
 
-- 用`{}`展开一个值的属性，可以嵌套地对里面的属性进行模式匹配
-    - 一个什么属性也不检查的空`{}`相当于`xx is not null`
-- 如果一个值可以被迭代，则可以用`[]`嵌套地对他的元素进行模式匹配
-    - 用`_`占位元素但不验证
-    - 列表模式可以用`..`表示任意个元素，使得表达式只检查头尾指定数量的元素
-        - `..`在一个列表模式里之多用一个，否则无法区分元素所在位置
+对于复杂类型，可以对他们的成员进行模式匹配。
+
+### 成员
+
+使用`{}`访问值的成员。[^判断非空]
+
+[^判断非空]:访问成员时会首先判断值不为`null`，  
+一个空的`{}`相当于`is not null`。
 
 ```csharp
-string s = "hello";
-if (s is { Length: 5 })
+if (DateTime.Now is { Year: > 2000, Month: < 8 })
 {
-	Console.WriteLine("长度为5");
 }
-if (s is [ _, 'e', ..])
+```
+
+### 列表
+
+对于可使用`Index`值的索引器，且有`Length`或`Count`属性的值[^可数的]，  
+可使用`[]`展开列表模式，对里面的元素进行模式匹配。
+
+- 使用列表模式时，对于不想进行判断的项可以使用`_`表示忽略判断。  
+- 使用列表模式时，可以使用`..`来表示忽略之后的所有项/开头的所有项目。[^预先判断数量]
+
+[^可数的]:必须是具有`get`访问器，类型为`int`的属性。同时存在时，`Length`优先。
+
+[^预先判断数量]:
+列表模式首先会访问`Length`或`Count`获取长度与列表元素数量判断。  
+若不使用范围时元素数量与长度不匹配，或是使用范围时元素数量大于长度，  
+那么会直接认为不匹配。
+
+```csharp
+if ("hello" is [ _, 'e', 'l', ..])
 {
-	Console.WriteLine("第二个字符是e");
+}
+```
+
+### 解构
+
+若值可以被解构[^无解构重载]，可以使用`()`对解构值进行模式匹配。
+
+- 对于不想判断的项可以使用`_`表示忽略判断。  
+
+[^无解构重载]:解构时会调用目标的`Deconstruct`方法，  
+元素数量，顺序，类型与其`out`参数一致。  
+模式匹配只能确定数量，不能确定类型，  
+所以与解构模式参数数量相同的`Deconstruct`重载只能有一个。  
+否则会有调用歧义。
+
+```csharp
+switch (("小明", 12))
+{
+	case (_, > 5):
+		Console.WriteLine("hello");
+		break;
+	default:
+		break;
 }
 ```
 
 ## 类型判断
 
-- 直接填写类型可以判断值是否为此类型
-    - 若只判断为一个类型，可以同时声明变量
-    	- 如果要多次使用表达式计算来的值，可以此当场声明变量
-    - 类型后可接内容判断或值判断
-    - 可以以`var`匹配任何类型来声明中间变量，以写单一表达式
-    	- 内容判断里的任何嵌套属性可以声明变量
-    	- 列表模式下的`..`可以声明变量
-- 不会验证自定义的类型转换，只检查基于继承的类型匹配
+可以对值进行类型匹配。并同时附加解构或成员匹配。  
+列表模式需要单独使用`and`判断。
+
+```csharp
+object o = DateTime.Now;
+switch (o)
+{
+	case string:
+	case int[] { Length: > 20 } and [0, 1, 2, ..]:
+	case DateTime(_, { Hour: > 12 }) { Ticks: > 2000 }:
+	default:
+		break;
+}
+```
+
+## 声明
+
+使用模式匹配时可以声明变量。  
+若匹配成功则把值赋值给这个变量。
+
+- 嵌套模式匹配时可以为内容声明变量
+- 可以为表达式声明变量，以凑出单条语句
+- 声明变量时可以使用`var`作为类型判断[^单条语句]
 
 ```csharp
 object o = "hello";
 switch (o)
 {
-	case string { Length: var len }://声明内容为变量
-	case int[] and [_, _, .. var p]://声明列表为变量
-	case int i2 when (i2 + 3) is var i3 && i3 > i2 * 2 && i3 < i2 * 3://把表达式的值声明变量
+	case string { Length: var len } s:
+	case int[] and [_, _, .. var arr]://声明列表为变量
+	case DateTime(_, var time)://声明内容为变量  
 		break;
 }
 
@@ -74,30 +185,14 @@ if (o is not int i)
 {
 	i = 2;
 }
+else if ((i * 2) is var i2 && i2 > i * 3)
+{
+	i = -i;
+}
 Console.WriteLine(i);
 ```
 
-## 解构
-
-- 如果一个值可以被解构，则可以边解构边进行匹配
-    - 用`_`表示舍弃
-    - 可以同时进行类型判断来进行解构
-
-```csharp
-switch ((12, "小米"))
-{
-	case ( > 5, { Length: >= 5 }):
-	case { Item1: > 3 }://元组仍然可以用内容判断
-	case (var age, _):
-	default:
-		break;
-}
-object o2 = (12, "小米");
-switch (o2)
-{
-	case ValueTuple<int, int>(var a, var b)://元组类型的书面写法
-	case ValueTuple<int, string>(> 5, _):
-	default:
-		break;
-}
-```
+[^单条语句]: 方法的返回值，一个计算的表达式，他们计算得到的值是临时的。  
+如果对这个临时值有多个判断需要用变量储存起来。  
+`var`的声明模式可以将声明变量的步骤和后续的判断步骤合并成单条语句。  
+而c#中有一些语法会要求必须是单条语句。此时可以使用`var`声明模式。
