--- a/语法/程序入口.md
+++ b/语法/程序入口.md
@@ -1,12 +1,14 @@
 ﻿# 程序入口
 
-在源码编译好后的文件中，存在很多指令。一个程序应当存在一个默认执行的指令。  
-若没有，则这份文件只能被其他程序调用来执行里面的指令，不能自己启动。
+一个程序里可以含有很多的指令。  
+这些指令可以被别的已经启动的程序调用。  
+但如果没有别人调用，而是自己独立运行，  
+那么需要指定一个指令启动指令。
 
 ## 顶级语句
 
-c#9之后，一个文件直接书写执行语句，那么就会被作为这个项目的入口点。  
-一个项目里只能有一份这样的文件。
+c#9之后，一个文件直接书写执行语句，  
+那么就会被作为这个项目的入口点。
 
 ```csharp
 Console.WriteLine("Hello World!");
@@ -14,8 +16,11 @@ Console.WriteLine("Hello World!");
 
 ## Main方法
 
-在早期，一个程序入口的声明类似如下  
-其中`static void Main(string[] args)`是入口，后随的大括号内是执行语句。
+如果不存在顶级语句，
+那么类似以下形式的`Main`方法会代替作为程序入口点。[^Main形式]
+
+[^Main形式]:只要求是`static void Main(string[] args)`形式的方法。  
+所处的类名（Program），命名空间名（Application)，文件名没有要求。
 
 ```csharp
 namespace Application
@@ -30,13 +35,41 @@ namespace Application
 }
 ```
 
-# API（应用程序接口）
+## 入口点只能有一个
 
-如果把编程类比做包子的话，我们不需要从养猪种菜开始做起。  
-我们可以直接买到剁好的猪肉和面团，我们只考虑捏一个怎样的包子。
+以下情况会导致编译错误：
 
-.Net就是卖这些东西的商店，而这些材料则叫做API。  
-`Console.WriteLine()`就是一个API，把括号里的内容输出到控制台上。
+- 有多个文件使用顶级语句。
+- 没有顶级语句的时候有多个`Main`方法。[^顶级语句优先级更高]
+- 没有任何程序入口点。[^类库]
 
-如果不学从养猪种菜的话，那我们能做的事情不会超过.Net能做的事情。  
-所以在必要时候需要升级更新.Net版本。
+[^顶级语句优先级更高]:同时存在顶级语句和`Main`方法时，`Main`方法会被无视。
+[^类库]:没有入口点的项目可以编译为**类库（.dll）**。
+
+# 预提供的东西[^不要过于纠结底层]
+
+如果把编程类比做包子的话，  
+我们不需要从养猪种菜开始做起。  
+我们可以直接买到剁好的猪肉和面团，  
+我们只考虑捏一个怎样的包子。
+
+## API
+
+`.Net`是卖这些东西的商店，  
+而这些材料则叫做API（应用程序接口）。  
+`Console.WriteLine()`就是一个API，  
+把括号里的内容输出到控制台上。
+
+## 关键字
+
+关键字是c#预先定义好的，具有特殊功能的单词。  
+例如`new`,`sizeof`,`if`,`goto`等。
+就像'按下任意键继续'时不能使用'关机键'。  
+他们自己功能的优先级高于程序里定义的功能。
+
+[^不要过于纠结底层]: 现在的变成语言提供很多的东西，  
+就是为了新人不必花大量时间学习底层原理。  
+不要觉得学习一门编程语言应该用底层原理作为基础。
+
+
+
