--- a/语法/类成员.md
+++ b/语法/类成员.md
@@ -3,36 +3,45 @@
 结构，类，接口的主体内可以存在声明语句。声明的东西统称为类成员。  
 类成员有以下种类：
 
-- 类：  
-  - 类型定义可以定义在其他类的里面。  
-  最外层的类称为顶级类，里面的类称为嵌套类。  
+- 嵌套类：  
+  - 自定义类型可以定义在其他类的里面。
   - 嵌套类可以访问定义类的`private`成员。
 - 字段：  
   - 字段就是变量。
   - 字段可以用`readonly`（只读）修饰。
-  - 方法里的局部变量随着方法结束而清理，  
-  字段会随着定义类的对象被清理而清理。  
-  - 引用类型的清理要等待垃圾回收功能，时机无法确定。
 - 方法：  
   - 类里面的方法可以**重载**。  
-  重载是指名字相同，参数列表不同的方法。
-    - 参数列表指参数的类型，数量，顺序。  
-    - 引用参数和普通参数视为不同类型
-    - 引用参数的不同变体`int`,`ref`,`out`视为相同类型 
-  - 编译器会自动选择最适配的方法，但仍可能不是最优选择。
-      - 如果有多个方法适配程度相同，会出现报错。
-      - 如果形参名字不一样，可以用命名参数指定选择重载。
 - 属性：
-    - 属性可以定义访问器，调用者可以像使用变量一样使用属性。
-        - 调用者像获取变量一样获取值时，调用属性的`get`访问器
-        - 调用者像给变量赋值一样修改值时，调用属性的`set`访问器
-    - 属性和方法可以一定程度上相互转换。用哪个取决于规范和约定
+    - 调用者可以像使用变量一样访问属性，但执行过程却是方法。
 - 索引器：  
-    索引器是带参数的属性，使用`[]`访问而不是`.`访问
+    - 索引器是带参数的属性，使用`[]`访问，里面可以写参数。
 - 事件:
   - 事件是针对`委托`的属性。他的访问器是`add`和`remove`
-  - 委托储存了方法，要阻止外部调用和赋值，只允许添加或移除他自己的方法
-  - 方法可以像变量一样储存，等待合适的实际调用
+
+## 字段
+
+在方法里的变量又称为**局部变量**。  
+当方法结束就可以清理资源。
+
+字段又称为**成员变量**。  
+当附随的类被清理时，字段才会被清理。
+
+## 方法
+
+在方法中的方法称为**本地方法**或**局部方法**。  
+他们只能在所处的大括号内访问，但仍然会编译为成员方法。
+
+成员方法可以重载。重载是指同名，但参数列表[^参数列表]不同的方法。  
+在调用时，编译器会选择最合适的方法调用。  
+但仍然可能存在无法判断的情况[^方法歧义]。  
+
+[^参数列表]:参数列表是指参数的数量，类型，顺序。  
+引用参数和普通参数视为类型不同。  
+但引用参数的三种变体`in`,`ref`,`out`视为相同类型。
+
+[^方法歧义]:例如`int,float`和`float,int`重载，并使用`int,int`为参数调用。  
+如果参数名字不同，可以使用命名参数消除歧义。  
+或是使用显式转换明确参数类型。
 
 ## 属性
 
@@ -63,44 +72,21 @@ record Rec()
 访问器有3种：
 
 - `get`：获取值  
-  - `get`访问器是一个有返回值的方法（返回类型和属性一样）  
-  - 在被当作变量访问时调用这个访问器
+  - `get`访问器是一个有返回值的方法，返回类型和属性一样  。
+  - 在被当作变量访问时调用这个访问器。
 - `set`：设置值  
-  - `set`访问器是有一个参数的方法（参数类型和属性一样），  
-  参数名为`value`，这是一个上下文关键字，仅在`set`访问器中可以使用。  
+  - `set`访问器是有一个参数的方法，参数类型和属性一样，  
+  - 参数名为`value`，这是一个上下文关键字，仅在`set`访问器中可以使用。  
   - 被当作变量赋值时调用这个访问器，`value`为用于赋值的值。
 - `init`：初始化  
-  - `init`访问器和`set`访问器类似，只是在源码中限制了赋值的地方，  
-  仅允许在初始化阶段以及对象初始化器中访问
+  - `init`也会被编译为`set`访问器，但只允许在源码中的初始化部分调用。
   - 除了对象初始化器以外，可赋值的地方和`readonly`字段一样。
+  - 在访问器中可以为`readonly`字段赋值。
 
 访问器可以单独设置访问权限
 
 - 必须有两个访问器时才能给其中一个设置
 - 权限不能高于属性的权限
-
-### 自动属性
-
-属性可以不写逻辑，由编译器自动创建字段和定义逻辑。
-
-- 至少要有`get`访问器
-- 可以在属性后赋值以对自动创建的字段赋值初始值
-
-```csharp
-record Rec(string FirstName, string LastName)
-{
-	string FullName { get;} = FirstName + " " + LastName;
-}
-```
-
-`Property { get;} = xxx`和`Property => xxx`的区别是执行时机和执行次数
-
-- `{ get;} = xxx`是给匿名字段赋值，并且以后`get`会返回这个匿名字段
-    - 在构造阶段执行。如果这个过程会报错，那么会在构造的过程中报错
-	- 如果值是一个表达式，那么只在赋值的时候计算一次，之后不会改变
-- `=> xxx`是`get`返回的内容
-    - 如果这个过程会报错，要等到第一次访问属性的时候才报错
-	- 如果`xxx`是一个表达式，每次访问的时候都会重新计算
 
 ### lamda表达式
 
@@ -125,13 +111,42 @@ record Rec2()
 }
 ```
 
+### 自动属性
+
+属性可以不写逻辑，由编译器自动创建字段和定义逻辑。
+
+- 至少要有`get`访问器
+- 可以在属性后赋值以对自动创建的字段赋值初始值[^分辨仅get的属性和自动属性]
+
+```csharp
+record Rec(string FirstName, string LastName)
+{
+	string FullName { get;} = FirstName + " " + LastName;
+}
+```
+
+利用为访问器设置访问权限，可以声明只允许自己修改的属性。
+
+```csharp
+class Student
+{
+	public int Age { get; private set; }
+}
+```
+
+[^分辨仅get的属性和自动属性]:
+`Property { get;} = xxx`在访问器定义完后进行赋值，是一个自动属性。  
+如果用表达式赋值，那么会在构造阶段计算，并且以后访问都是这个结果。  
+`Property => xxx`省略了访问器，是一个仅`get`属性。  
+如果返回内容是一个表达式，那么每次访问都会实时计算结果。
+
 ## 索引器
 
 索引器的名字限定为`this`，在后面以`[]`填写参数列表。  
 而后与属性一样使用访问器。
 
 - 访问自己的索引器使用`this[]`
-- 访问别的变量的索引器使用`XX[]`
+- 访问别的变量的索引器使用`变量名[]`
 
 ```csharp
 record Rec4(string FirstName, string LastName)
@@ -160,7 +175,7 @@ record Rec4(string FirstName, string LastName)
 
 - 事件使用`add`和`remove`访问器，且必须存在
     - 这两个访问器都是一个参数，无返回值的方法。
-- 自动事件可以在声明类里调用他的匿名字段。
+- 自动事件可以在声明类里调用他的匿名字段[^如果存在匿名字段]。
 
 ```csharp
 record Rec()
@@ -182,6 +197,9 @@ record Rec()
 }
 ```
 
+[^如果存在匿名字段]:如果事件是抽象的，那么不会自动定义逻辑，也就不会存在对应的匿名字段。  
+如果事件是接口中的实例成员，由于接口不能存在字段，所以也不会存在对应的匿名字段。
+
 ## 匿名字段，内部名称
 
 自动属性和自动事件会创建一个匿名字段。  
@@ -194,10 +212,10 @@ record Rec()
 ```csharp
 class C
 {
-	int A { get; set; }
+	int A { get; set; }//get和set名称都被占用
 	int get_A() => 1;
 	void set_A(int value) { }
-	int this[int i] { get => 0; set => _ = value; }
+	int this[int i] { get => 0; set => _ = value; }//索引器占用Item的名称
 
 	int Item;
 	int get_Item(int a) { }
@@ -213,29 +231,31 @@ class C
 静态成员是依附于类型的，不需要考虑实例。  
 例如人有两条腿不需要指出具体的人就能讨论。
 
+具体例子可以搜索民法中的**种类物，特定物**。
+
 ## 实例成员
 
-- 实例成员可以从该类型的值上访问
-- 在类的内部可以使用`this`表示自己
-    - 定义了同名参数时可以使用`this.`访问到实例成员
+- 实例成员可以从该类型的值上访问。
+- 在类的内部可以使用`this`表示自己。
+    - 定义了同名参数时可以使用`this.`访问到实例成员。
     - 如果方法参数或是变量赋值要使用自己时，使用`this`传递。
 - 实例字段的初始值不能使用其他实例字段参与的表达式。
 
 ## 静态成员
 
-- 静态成员使用`static`修饰
-    - `const`也视为静态成员
-    - 静态成员从类型上访问
-- 静态与`this`（代表实例）冲突，不能定义静态索引器
-- 静态成员不能直接使用实例成员，必须通过实例访问
-- 静态字段可以使用其他静态字段参与的表达式进行赋值
-    - 按定义顺序进行初始化，还没初始化的值为`default`
-    - 实例字段可以使用静态成员参与的表达式作为初始值
+- 静态成员使用`static`修饰。
+    - 嵌套类和`const`也视为静态成员。
+    - 静态成员从类型上访问。
+- 不能定义静态索引器。
+- 静态成员访问实例成员也必须通过实例。
+- 静态字段可以使用其他静态字段参与的表达式进行赋值。
+    - 按定义顺序进行初始化，还没初始化的值为`default`。
+    - 实例字段可以使用静态成员参与的表达式作为初始值。
 
 ```csharp
 Console.WriteLine(People.Leg);
 
-record People(string Name)
+record People
 {
 	public static int Leg => 2;
 }
@@ -257,23 +277,25 @@ record People(string Name)
    2. 静态构造器
    3. 实例初始值
 2. 从基类到自身依次执行
-   1. 实例构造器
-   - 直到这里都可以为`readonly`字段和仅`get`自动属性赋值
-3. 对象初始化器
-    - 直到这里都可以为`init`访问器赋值
+   1. 实例构造器[^赋值readonly]
+3. 对象初始化器[^访问init]
+
+[^赋值readonly]:直到这里都可以为`readonly`字段和仅`get`自动属性赋值
+[^访问init]:直到这里都可以为`init`访问器赋值
 
 如果一个类没有写构造器，编译器会自动合成一个`public`的无参构造器。  
 
-- 如果`class`写了构造器，就不会合成这个无参构造器
+- 如果`class`写了构造器，就不会合成这个无参构造器，`struct`仍会保留。
 - 构造器的默认访问权限也是`private`,要让外部访问也要加`public`
 
 ### 主构造器
 
 在类型后的参数列表，是主构造器。
 - 实例成员可以使用主构造器里的值作为初始值。
-- 如果方法（包括索引，属性，事件）里使用了主构造器里的参数，  
-  那么还会自动保存这些参数作为字段。
-    - `record`类型无论方法里是否使用都会保存，并且会保存为属性而非字段。
+- 如果方法[^泛方法]里使用了主构造器里的参数，那么还会自动保存这些参数作为字段。
+- `record`修饰的类型无论方法[^泛方法]里是否使用都会保存，并且会保存为属性而非字段。
+
+[^泛方法]:包括索引，属性，事件
 
 ### 构造器链
 
@@ -281,7 +303,7 @@ record People(string Name)
 为了保证构造器只调用一次，必须使用特殊语法调用。  
 
 调用的其他构造器只能在构造器执行的最开始。  
-如果有主构造器，那么调用链上必须含有主构造器。
+如果类型有主构造器，那么调用链上必须含有主构造器。
 
 ```csharp
 record People(string Name)
@@ -329,10 +351,9 @@ record People()
 
 `class`可以声明为静态的
 
-- 这样的类不能有构造器
-    - 自动合成的构造器也没有
-- 不能声明这种类型的变量（包括参数）和返回值
-- 所有成员都必须是静态的
+- 这样的类不能有构造器，也不会自动合成构造器。
+- 不能声明这种类型的变量（包括参数）和返回类型。
+- 所有成员都必须是静态的。
 
 ### 扩展方法
 
@@ -369,7 +390,7 @@ static class Tool
 
 ## 自定义运算符
 
-使用`operator`可以为这个类型定义运算符，一些规则如下
+使用`operator`关键字可以为这个类型定义运算符，一些规则如下
 
 - 是静态方法
 - 参数至少有一个是自己类型。
@@ -393,8 +414,8 @@ record Speed(int MetrePerSecond = 0)
 ### 自增和自减
 
 - `++`和`--`要求返回值类型必须是自己。
-- 当一个变量完成了`++`或`--`后，这个变量会执行一个赋值操作，
-- 用这个运算符的返回值将原变量替换。
+- 当一个变量完成了`++`或`--`后，这个变量会执行一个赋值操作，  
+  用这个运算符的返回值将原变量替换。
 
 ### true和false
 
