--- a/语法/继承.md
+++ b/语法/继承.md
@@ -3,11 +3,12 @@
 在声明**类 / 接口**时，可以指定对应的类型作为基类。  
 这会获得基类**除了构造器**和终结器的所有**实例**成员。
 
-- 结构，静态类，枚举无法声明继承
-    - 但仍然和一些系统类有继承关系
-- 类只能指定一个类继承
-    - 普通类只能从普通类上继承，记录类只能从记录类上继承。
+- 结构，静态类，枚举无法声明继承[^仍然有继承]
+- 类只能指定一个类继承[^普通类和记录类不混用]
 - 接口可以继承多个接口
+
+[^仍然有继承]:在使用关键字声明这些类型时，他们还是会由系统继承一些类型。
+[^普通类和记录类不混用]:普通类只能从普通类上继承，记录类只能从记录类上继承。
 
 ```csharp
 class Bulbasaur//妙蛙种子
@@ -41,19 +42,25 @@ ivysaur.VineWhip();
 
 ### 为什么要使用基类型而不直接使用具体的类
 
-用基类装载变量主要是作为方法参数使用。  
-这样可以让这个方法在更多的情况下被调用。
+在数据交互时，如果基类已经具有需要的成员，  
+那么使用基类作为API，可以在更多地方被调用。
+
+对于不会修改的、不需要兼容的字段，  
+和局部变量确实不需要对已知类型使用基类变量装载。
 
 ## 覆写和重写
 
 派生类可以定义和基类同名的成员。
 
 - 若不加修饰或添加`new`，则是覆写。
-    - 覆写的成员，按照变量类型来访问成员。
-- 基类的方法（属性，索引，事件）可以用`virtual`修饰，  
+    - 覆写的成员，按照宣称类型[^宣称]来访问成员。
+- 基类的方法[^泛方法]可以用`virtual`修饰，  
 - 派生类可以用`override`修饰定义同名方法可以重写逻辑。  
     - 重写的成员按照值的实际类型来访问成员。
     - 重写的方法签名需要和被重写的方法相同。
+
+[^泛方法]:也包括属性，索引，事件。
+[^宣称]:变量类型，方法返回类型
 
 ```csharp
 HealthValueAdjustment recovery = new Recovery() { Value = -20 };
@@ -92,7 +99,7 @@ class Recovery : HealthValueAdjustment//恢复值
 }
 ```
 
-## 密封
+### 密封
 
 - 类型可以添加`sealed`修饰，这样的类型将不允许作为基类。
 - 重写过的方法仍然视为有`virtual`，可以添加`sealed`修饰，不允许派生类再重写。
@@ -150,9 +157,8 @@ record Clerk : People
 
 用`abstract`修饰类可以使其成为抽象类。
 
-- 抽象类可以用`abstract`声明抽象方法（属性，索引，事件）。
-    - 抽象方法是没有主体（也不会生成匿名字段）的`virtual`方法。
-	- 抽象的自动属性和自动事件不会生成相应的主体，也不会生成匿名字段
+- 抽象类可以用`abstract`声明抽象方法[^泛方法]。
+    - 抽象方法是没有主体[^无匿名字段]的`virtual`方法。
 - 抽象类的构造器只能由派生类调用，不能使用`new`来创建实例
 - 如果继承抽象类的类不是抽象类，那么必须重写所有抽象成员
 
@@ -162,3 +168,7 @@ abstract class Food
 	public abstract int Satiety { get; protected set; }
 }
 ```
+
+[^无匿名字段]:自动属性和自动事件会生成一个匿名字段，  
+并自动编写逻辑以控制这个匿名字段。  
+抽象属性由于没有逻辑，这个字段无法使用，所以也不会生成。
