--- a/语法/字面量.md
+++ b/语法/字面量.md
@@ -1,54 +1,37 @@
-﻿# 数据
+﻿# 类型
 
-程序里除了指令外，另一个重点是数据。
+c#中所有值/数据都属于一种类型。  
+类型决定了这个值有什么内容，可以做什么事情。  
+例如数字类型可以加减乘除。  
+而文字类型可以拼接，裁剪，替换，查找。
 
-## 面向对象
+## 获取值
 
-c#是一种面向对象语言。**对象**是一种包含数据和指令的概念。
+c#中值的获取一般有以下方式
 
-对象的指令通常会访问他包含的数据，所以数据改变会让指令造成的结果改变。  
-同时对象一般会给出能改变自己数据的指令。改变同时保证数据在合法范围内。
-
-## 类型
-
-c#中所有数据都属于一种类型。类型决定了这个数据包含什么数据和指令。  
-例如数字类型可以加减乘除。而文字类型可以拼接，裁剪，查找。
-
-## 字面量
-
-获取数据可以分为以下三种方式：
-
-- 构造  
+- `new`构造  
   构造是由.Net查验类型，开辟内存，初始化的过程。  
-  这是大部分对象的获取过程。
-
+  通过`new`关键字使用。
   ```csharp
   Console.WriteLine(new int());
   ```
-
-- 获取  
-  从类型提供的指令或直接获取他们储存的数据。  
-  或许是觉得你没有必要构造，自己构造一个给大家用。  
-  或许是构造后仍然需要配置，处理完了再给你。
-
-  ```csharp
-  Console.WriteLine(int.Parse("1") + int.Parse("2"));//文字转数字，做数学运算
-  Console.WriteLine("1" + "2");//文字的加法会拼接文字得到12
-  ```
-
 - 表达式  
-  值之间可以运算。例如`1+1`，会得到`2`。
-
-- 字面量  
-  一个时间会包含时，分，秒，毫秒等多个数字，是一个对象。  
-  数字类型虽然在c#概念里也叫对象，但它不能再拆分出包含的类型了。  
-  像这种基本类型构造是没有意义的，它们可以直接书写出值。 
-
+  通过调用方法，获取成员，运算符计算，  
+  或其他表达式等方式获取到的值。这种值是临时的。
   ```csharp
-  Console.WriteLine(12 + 24);
+  Console.WriteLine(1+2);
+  ```
+- 字面量  
+  复杂类型例如时间，包含一些更基础的数据（作为数字的时分秒）。  
+  而数字，文本这些最基础的类型不可再分。  
+  可以直接书写值。
+  ```csharp
+  Console.WriteLine(3);
   ```
 
-能以字面量构造的类型有：
+# 字面量
+
+以下类型可以使用字面量：
 
 - 整数类型：直接书写数字。
 - 小数类型：直接书写带小数点的数字。
@@ -58,32 +41,33 @@ c#中所有数据都属于一种类型。类型决定了这个数据包含什么
 - 空引用：关键字`null`
 
 ```csharp
-Console.WriteLine(1024);//整数
-Console.WriteLine(3.14);//小数
-Console.WriteLine("你好");//文本
-Console.WriteLine('对');//字符
+Console.WriteLine(1024);//整数类型
+Console.WriteLine(3.14);//小数类型
+Console.WriteLine("你好");//文本类型
+Console.WriteLine('对');//字符类型
 Console.WriteLine(true);//布尔类型
 Console.WriteLine(value:null);//空引用
 ```
 
-### 数字的字面量修饰
-
-#### 强制类型
+## 数字的字面量修饰
+### 强制类型
 
 数字类型分为很多种类。占用空间更小的类型能储存的范围更小，或是精度更低。
 
-数字的字面量默认是`int`和`double`。
-在整数过大时会自动变为`long`或`ulong`。  
+数字的字面量默认是`int`和`double`。  
 在数字的后面可以加后缀，使得强制变为某种类型，不区分大小写。
 
-- `u`:uint或ulong
-- `L`:long
+- `u`:uint或ulong[^取决于原本的类型]
+- `L`:long[^用L]
 - `ul`：ulong
 - `f`：float
 - `d`：double
 - `m`：decimal
 
 整数类型可以加小数类型的后缀变为小数。
+
+[^用L]:由于小写的L和数字1很像，所以一般用大写的L
+[^取决于原本的类型]:原本为`int`的类型会变为`uint`，原本为`long`类型会变为`ulong`。
 
 ```csharp
 Console.WriteLine(100);
@@ -93,7 +77,8 @@ Console.WriteLine(10 / 3);//整数除法会忽略余数
 Console.WriteLine(10f / 3);//小数除法会保留小数
 ```
 
-#### 分隔符
+
+### 分隔符
 
 在数字中间可以任意添加下划线`_`来作为分割符来增加可读性，这不会影响数字的值。
 
@@ -102,7 +87,7 @@ Console.WriteLine(1_000_000);
 Console.WriteLine(1_0__0___0_____0______0); 
  ```
 
-#### 2进制和16进制（仅限整数类型）
+### 2进制和16进制（仅限整数类型）
 
 在数字的开头加上`0b`，可以让这个数字以2进制的方式构造字面量。  
 在数字的开头加上`0x`，可以让这个数字以16进制的方式构造字面量。
@@ -112,19 +97,15 @@ Console.WriteLine(0b10000);//16
 Console.WriteLine(0x1a);//26
 ```
 
-#### 科学计数法（仅限小数类型）
+### 科学记数法（仅限小数类型）
 
-在物理中，无法得到数学中的绝对精确数字。  
-根据测量精度，和误差容忍，只需要数字保持必要的精度。
+小数类型可以使用`e`的格式使用科学计数法。[^科学计数法]  
+另外，小数类型的小数点前面的0可以省略。
 
+[^科学计数法]:在物理中，无法得到数学中的绝对精确数字。  
+根据测量精度，和误差容忍，只需要数字保持必要的精度。  
 科学计数法通常以"1.36524*10^12^"这种形式表示。  
-前面的部分表示必要的精度，  
-后面的部分单纯修正数字的大小。  
-为了简写，后面的修正部分会用字母e代替，  
-表示为这种形式“1.36524e12”。
-
-小数可以用科学计数法构造。
-此外，小数点前面的0可以省略。
+并简写为“1.36524e12”。
 
 ```csharp
 Console.WriteLine(0.0);
@@ -134,15 +115,17 @@ Console.WriteLine(12e-2);//0.12
 Console.WriteLine(0e9);//0
 ```
 
-### 文本和字符的字面量修饰
+## 文本和字符的字面量修饰
 
-#### 转义
+### 转义
 
-在源码中，一些字符无法打出（换页，退格），一些字符会有字面量歧义（换行，引号）。  
-那么，如果要在源码的文字中表示这些字符，就要使用其他的替代方案。
+在源码中，一些字符无法打出（换页，退格），  
+一些字符会有字面量歧义（换行，引号）。  
+那么，如果要在源码的文字中表示这些字符，  
+就要使用其他的替代方案。
 
-这个过程称为转义。
-转义仅用来在源码中表示程序值的时候会发生，
+这个过程称为转义。  
+转义仅用来在源码中表示程序值的时候会发生，  
 在程序运行时拼接出来的值不会被转义。
 
 转义是由反斜杠开头的特定组合：
@@ -158,25 +141,31 @@ Console.WriteLine(0e9);//0
 Console.WriteLine('\'');//会输出“'”
 Console.WriteLine("\"\\");//会输出“"\”
 Console.WriteLine('\u5238');//输出“卷”
-Console.WriteLine("1\t1\n11\t1\n111\t1\n1111\t1");//水平制表符可以根据以及用的字符数量，自动决定生成多少个空格
+Console.WriteLine("1\t1\n11\t1\n111\t1\n1111\t1");
 ```
 
-#### 原始字符串
+### 原始字符串
 
-有的时候，我们会从其他地方复制东西过来。
-从文件路径复制来的文字中，含有大量反斜杠。
+有的时候，我们会从其他地方复制东西过来。  
+从文件路径复制来的文字中，含有大量反斜杠。  
 从网页源码复制来的文字中，含有大量引号。
 
-为了便于修改，可以使用原始字符串。原始字符串会无视内部的所有转义，以原样生成。
+为了便于修改，可以使用原始字符串。  
+原始字符串会无视内部的所有转义。  
 原始字符串使用3个或更多的双引号开头，以相同数量的引号结尾。
-
-在使用多行原始字符串时，首尾的引号必须单独放置在一行，不能包含内容文字。
-首末行不会被记录一个换行。结束引号的前面有多少个空格，文本就会裁剪等量的前导空格。
-内容行首不能超过收尾引号。
 
 ```csharp
 Console.WriteLine("""C:\Program Files\dotnet\packs""");
 Console.WriteLine("""""用户输入{""""}""""");//如果字符里面的连续引号过多，就增加原始字符串首尾引号数量，直到文本中的引号不会有歧义。
+```
+
+在使用多行原始字符串时，  
+首尾的引号必须单独放置在一行，不能包含内容文字。  
+首末行不会被记录一个换行。  
+结束引号的前面有多少个空格，文本就会裁剪等量的前导空格。  
+内容行首不能超过收尾引号。
+
+```csharp
 Console.WriteLine(
 """
 <html
