--- a/语法/泛型.md
+++ b/语法/泛型.md
@@ -1,16 +1,19 @@
 ﻿# 泛型
 
-集合类型通常来说，只收集，管理值，但不调用值的任何内容。  
-像这种不在乎什么类型，但要求类型一致的场合，可以使用**泛型**。
+类似于集合类型的类，只对数据做收集和管理。  
+仅要求值的类型一致，却不使用值的任何内容，  
+这种情形可以使用**泛型**。
 
-## 泛型类
+## 声明泛型
 
-在类名后可以定义泛型参数。在类中会视为这种类型存在。
+### 泛型类
 
-- 类，结构，接口，委托都可以声明泛型参数
-- 字段，属性，索引，事件的类型，方法的参数和返回值都可以使用泛型
-- 构造器定义时抄写类名的时候不需要抄写泛型
-- 访问泛型类的静态成员，或是实例化泛型类时，需要填写有效类型传入泛型参数里
+自定义类型后可以定义泛型参数。在类中会认为这种类型是存在的。
+
+- 类，结构，接口，委托都可以声明泛型参数。
+- 字段，属性，索引，事件的类型，方法的参数和返回值都可以使用泛型。
+- 构造器定义时抄写类名的时候不需要抄写泛型。
+- 同名但泛型数量不同的类视为不同的类
 
 ```csharp
 class Lump<T>(T[] items)
@@ -30,51 +33,45 @@ class Lump<T>(T[] items)
 } 
 ```
 
-## 泛型方法
+### 泛型方法
 
-在方法名后可以定义泛型参数。在方法中会视为这种类型存在。
+无论是不是在泛型类中，方法都可以声明泛型。
 
 - 不包括属性，索引，事件
-- 泛型方法可以不在泛型类中定义
-- 调用泛型方法时，需要填入有效类型
-    - 如果调用者也有泛型，也可以传入他的泛型
-	- 如果可以从参数里判断出所有的泛型，可以省略填写泛型
-- 泛型名可以和类上的泛型名相同。若如此做，方法里边无法访问类的同名泛型
+- 泛型名可以和类上的泛型名相同。但若如此做，方法里边无法访问类的同名泛型
 
 ```csharp
-Tool.GetOrDefault<string>(default, default!);
-Tool.GetOrDefault(null, "666");
-
-static class Tool
+static T GetOrDefault<T>(T? get, T def)
 {
-	public static T GetOrDefault<T>(T? get, T def)
-	{
-		return get != null ? get : def;
-	}
+	return get != null ? get : def;
 }
 ```
 
-## 不同参数的泛型类是不相同的
+## 使用泛型
 
-- 泛型类可以和泛型参数数量不同的同名类处于同一个命名空间下
-- 不同的泛型类的各自拥有不同的静态成员
-    - 泛型类中的嵌套类也各不相同
+- 尽管声明构造器时不需要抄写泛型，但调用的时候需要写泛型。
+- 不同的泛型类会编译成不同的类。他们的静态成员的值是独立的。
+- 如果泛型方法可以从参数里推断出所有泛型，则可以省略泛型参数。
 
 ```csharp
 StaticValue<int>.Value = 10;
 StaticValue<double>.Value = 20;
-Console.WriteLine(StaticValue<int>.Value + StaticValue<double>.Value + StaticValue<string>.Value);//35
-
-StaticValue<int>.StructValue intStruct = new StaticValue<int>.StructValue();
-StaticValue<string>.StructValue stringStruct = new StaticValue<string>.StructValue();
-intStruct = stringStruct;//类型不兼容
-
-struct StaticValue;
-
-class StaticValue<T>
+Console.WriteLine(Value.GetValue<int>() + Value.GetValue(1.1));//30
+ 
+static class Value
+{
+	public static int GetValue<T>()
+	{
+		return StaticValue<T>.Value;
+	}
+	public static int GetValue<T>(T t)
+	{
+		return StaticValue<T>.Value;
+	}
+}
+static class StaticValue<T>
 {
 	public static int Value = 5;
-	public struct StructValue;
 }
 ```
 
@@ -83,15 +80,15 @@ class StaticValue<T>
 使用泛型约束会限制可以填入的类型，但是可以调用约束里的成员。  
 泛型约束使用`where`定义，多个泛型需要用多个`where`
 
-- 是引用类型：`class`
-    - 派生自某个类：写类名
-    	- 可以是另一个泛型
-- 是值类型：`struct`
-    - 非托管类型：`unmanaged`。遍历整个结构，没有任何引用类型的类成员
-	- 有值类型约束的可空值类型，可以和同名同参数列表的方法重载
-- 实现了某个接口：填写接口名字。
-- 无约束：`default`。在重写时取消基类的约束。
+- 派生自某个类：写类名[^可以是泛型]。
+- 是引用类型：`class`。
+- 是值类型：`struct`[^可空值类型]。
+- 实现了接口：接口名字。
 - 有无参构造器：`new()`。可以用`new`的方式创建实例。
+
+[^可以是泛型]:可以是另一个泛型
+[^可空值类型]:泛型带`?`时传入值类型也会任何不可为空。  
+有值类型约束时，`T?`会认为和`T`不同。
 
 ```csharp
 class Handbook<T> where T : ICreat<T>, IFood
@@ -160,15 +157,6 @@ interface IIn<in T>
 }
 ```
 
-## 装箱
+协变逆变过程中不允许有值类型参与。[^装箱]
 
-引用类型因为有继承，多态，虚方法等功能。  
-在调用成员时需要从对象头里查询类型信息，然后查表找到要调用的成员。
-
-值类型是没有对象头的，所以值类型不允许继承。编译器会把要调用的成员写死进去。
-
-把值类型变为引用类型这一过程，要给他加一个对象头。  
-这个过程叫装箱。反过来拆对象头也有性能损耗。
-
-协变逆变不允许出现需要装箱，拆箱的过程。
-更多介绍参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/csharp/programming-guide/types/boxing-and-unboxing)
+[^装箱]:[装箱](https://learn.microsoft.com/zh-cn/dotnet/csharp/programming-guide/types/boxing-and-unboxing)
